--- a/Cover-Comparison.ipynb
+++ b/Cover-Comparison.ipynb
@@ -22,7 +22,9 @@
     "import cv2\n",
     "import os\n",
     "from skimage.measure import compare_ssim as ssim\n",
-    "from IPython.display import Image, display"
+    "from IPython.display import Image, display\n",
+    "from matplotlib import pyplot as plt\n",
+    "%matplotlib inli"
    ]
   },
   {
